# cppite

./: .gitignore  LICENSE  README.md  main.py  start.sh
src/: cppite.py  main.py  settings.py  utils.py
src/cpp/: CMakeLists.txt  fragment.cpp  fragment.hpp  main.cpp  main.hpp
src/cpp/cmake/: Findglib.cmake
src/cpp/src/: fragment.cpp  fragment.h  fragment.hpp  main.cpp
src/py/: CMakeLists_tmpl.py  cpp_fragment_tmpl.py  cppite.py  settings.py  utils.py
